--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.quchen.flappycow"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 31
         versionName "3.4.0"
@@ -22,6 +22,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -30,5 +34,4 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.browser:browser:1.2.0'
     implementation project(':BaseGameUtils')
-    implementation 'com.google.android.gms:play-services-ads:18.3.0'
 }
